crates/keron-lang/tests/corpus/errors/check/list_contains_wrong_element_type.snap
---
source: crates/keron-lang/tests/harness/mod.rs
assertion_line: 75
---
error: type mismatch in `list_contains`: type parameter `T` was inferred as `String` from an earlier argument, but this argument is `Int`
  --> 2:36
  |
2 | val n: Boolean = list_contains(xs, 42)
  |                                    ^^
